2002-09-13  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Diagnose target clashes, for PR automake/344:
	* automake.in (%targets): Record conditionals for definitions.
	(%target_conditional): Remove (obsoleted by %targets).
	(%target_source, %target_owner): New hashes.
	(TARGET_AUTOMAKE, TARGET_USER): New constants.
	(initialize_per_input): Adjust to reset new variables.
	(err_cond_target, msg_cond_target): New functions.
	(msg_target): Adjust usage of %targets.
	(conditional_ambiguous_p): Take a list of conditional to check
	as a third parameter, so this can be used for other things that
	variables.
	(handle_lib_objects_cond): Adjust conditional_ambiguous_p usage.
	(variable_defined): Restrict the target-with-same-name check
	to user targets.
	(rule_define): Add the $SOURCE argument, and take $OWNER instead
	of $IS_AM.  Diagnose target clashes (including ambugious
	conditionals).  Return a list of conditions where the rule should
	be defined instead of a boolean.  Fill %target_source and
	%target_owner.
	(target_define): Use `exists', not `defined'.
	(read_am_file): Adjust the call to rule_define.
	(file_contents_internal): Add more FIXMEs.  Simplify my moving
	and documenting the "define rules in undefined conditions" to
	rule_define.
	* tests/Makefile.am (XFAIL_TESTS): Add specflags7.test and
	specflags8.test.

2002-09-12  Akim Demaille  <akim@epita.fr>

	* aclocal.in: Prototype all the functions.
	Add `(C)' to Copyrights.
	(&add_file): Strip the comments before checking for `AC_REQUIRE'.
	Remove Perl 4 hacks, since anyway we require 5.005 via General.pm.

2002-09-11  Akim Demaille  <akim@epita.fr>

	* lib/am/texinfos.am (TEXI2PDF): Pass --batch to texi2dvi, since
	it was already supported when --pdf support was added.

2002-09-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/Automake/Channels.pm (_default_options): Add `backtrace'.
	(msg): Die with backtrace if requested.
	* automake.in: Enable `backtrace' on the `automake' channel.
