@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-# The ctags/etags example from the manual, plus a check for _SHORTNAME.
+# The true/false example from the manual, plus a check for _SHORTNAME.
 
 required=gcc
 . ./defs || exit 1
@@ -31,24 +31,24 @@ AC_OUTPUT
 END
 
 cat > Makefile.am << 'END'
-bin_PROGRAMS = etags ctags
-ctags_SOURCES = etags.c
-ctags_CFLAGS = -DCTAGS
-ctags_SHORTNAME = c
-# No etags_SOURCES definition.  Use the default source.
-etags_CFLAGS = -DETAGS
-etags_SHORTNAME = e
+bin_PROGRAMS = false true
+true_SOURCES = false.c
+true_CFLAGS = -DTRUE
+true_SHORTNAME = t
+# No false_SOURCES definition.  Use the default source.
+false_CFLAGS = -DFALSE
+false_SHORTNAME = f
 END
 
-cat > etags.c << 'END'
+cat > false.c << 'END'
 #include <stdio.h>
 int
 main (int argc, char *argv[])
 {
-#ifdef CTAGS
-   puts ("ctags");
+#ifdef TRUE
+   puts ("true");
 #else
-   puts ("etags");
+   puts ("false");
 #endif
    return 0;
 }
@@ -60,7 +60,7 @@ $AUTOMAKE -a
 
 ./configure
 $MAKE
-./ctags | grep ctags
-./etags | grep etags
-test -f ./c-etags.o
-test -f ./e-etags.o
+./true | grep true
+./false | grep false
+test -f ./t-false.o
+test -f ./f-false.o
