@@ -1,5 +1,13 @@
 2002-09-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.texi (Building ctags and etags): Rename and adjust as ...
+	(Building true and false): ... this.
+	* tests/targetclash.test: New file.
+	* tests/specflags7.test, tests/specflags8.test: Adjust to build
+	true and false.
+	* tests/Makefile.am (TESTS): Add targetclash.test.
+	(XFAIL_TESTS): Remove specflags7.test and specflags8.test.
+
 	Diagnose target clashes, for PR automake/344:
 	* automake.in (%targets): Record conditionals for definitions.
 	(%target_conditional): Remove (obsoleted by %targets).
